<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Cherkasy,Ukraine</string>
    <string name="action_share" translatable="false">Share</string>



    <string name="pref_units_label">Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

</resources>
